# hfm-separator

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: architecture.md  design.md  numerics.md  testing.md
examples/: air_separation.csv  air_separation.py  h2_separation.csv  h2_separation.py  paper_figures.py  ternary_separation.csv  ternary_separation.py
src/hfm_separator/: __init__.py
src/hfm_separator/models/: __init__.py  components.py  module.py  permeance.py  results.py
src/hfm_separator/numerics/: __init__.py  constants.py  pressure.py  staging.py  thomas.py  viscosity.py
src/hfm_separator/solvers/: __init__.py  base.py  cocurrent.py  countercurrent.py  crossflow.py
src/hfm_separator/utils/: __init__.py  unit_conv.py
tests/: conftest.py
tests/integration/: test_air_separation.py  test_h2_separation.py  test_ternary.py
tests/unit/: test_cocurrent.py  test_crossflow.py  test_models.py  test_pressure.py  test_staging.py  test_thomas.py  test_unit_conv.py  test_viscosity.py
