[project]
name = "hfm-separator"
version = "0.1.0"
description = "Multicomponent hollow-fiber membrane gas separation simulator"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Josh Human", email = "josh@humanbuilds.dev" }]
keywords = [
    "membrane-separation",
    "gas-separation",
    "hollow-fiber",
    "chemical-engineering",
    "process-simulation",
    "numerical-methods",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "pydantic>=2.7",
    "pandas>=2.2",
    "matplotlib>=3.9",
]

[project.urls]
Homepage = "https://github.com/HumanBuilds/hfm-separator"
Repository = "https://github.com/HumanBuilds/hfm-separator"
Issues = "https://github.com/HumanBuilds/hfm-separator/issues"

[project.optional-dependencies]
docs = [
    "sphinx>=8.0",
    "sphinx-autodoc-typehints>=2.0",
    "furo",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "ty>=0.0.1",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hfm_separator"]

[tool.uv]
package = true

# ── Ruff: linter + formatter ──────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "ANN",  # flake8-annotations (enforce type hints)
    "NPY",  # numpy-specific rules
    "RUF",  # ruff-specific rules
]
ignore = [
    "RUF001",  # allow unicode (− ′ ·) in strings for equation references
    "RUF002",  # ... in docstrings
    "RUF003",  # ... in inline comments
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN001", "ANN202"]  # pytest fixtures need not be annotated
"examples/**/*.py" = ["ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── ty: type checker ──────────────────────────────────────────────────────────
[tool.ty.src]
include = ["src"]

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=hfm_separator --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["src/hfm_separator"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]
